<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Soccer Manager</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="id_label">ID</string>
    <string name="save">Save</string>
    <string name="no_players_found">No players found.  Click the menu button to add a new player.</string>
    <string name="no_teams_found">No teams found.  Click below to add a new team.</string>
    <string name="no_games_found">No games found.  Click below to start a new game.</string>
    <string name="view_player_list">View players</string>
    <string name="view_game_list">View games</string>
    <string name="view_team_list">Manage teams</string>
    <string name="create_player">Create new player</string>
    <string name="create_team">Create new team</string>
    <string name="delete_player" formatted="false">Delete #%d, %s?</string>
    <string name="play_game_header">Game on %1$tb %1$te, %1$tY.</string>
    <string name="player_list">Player list</string>
    <string name="game_list">Game list</string>
    <string name="team_list">Team list</string>
    <string name="play_game">Start new game</string>
    <string name="digital_clock_text">Current time</string>
    <string name="shift_stop_text">Stop</string>
    <string name="shift_set_current_text">Set current</string>
    <string name="seeFirstShift">See shifts</string>
    <string name="seePreviousShift">Previous shift</string>
    <string name="seeCurrentShift">Current shift</string>
    <string name="seeNextShift">Next shift</string>
    <string name="startShiftTimerButtonText">Start</string>
    <string name="debug_settings">Debug settings</string>
    <string name="alarm_vibrate_text">Vibrate when time is up?</string>
    <string name="alarm_sound_text">Play alarm when time is up?</string>
    <string name="shift_length_seconds">Length of each shift in seconds</string>
    <string name="shift_length_default">300</string>
    <string name="settings_text">Settings</string>
    <string name="shift_text">, Shift:</string>

    <string name="team_name">Team name</string>
    <string name="team_name_default">Growl</string>
    <string name="delete_team">Delete this team</string>
    <string name="resume_game">Resume most recent game</string>
    <string name="back_to_list_of_attending_players">Back</string>

</resources>
