<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c)  2015 Danek Consulting Company
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView android:id="@+id/team_list_header_text"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/background_1"
	    android:textColor="@color/default_text"
	    android:text="@string/team_list"/>
<ListView android:id="@+id/android:list"
    	android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="0dip"/>
<TextView android:id="@+id/android:empty"
       	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/no_teams_found"/>


    <LinearLayout
            android:orientation="horizontal"
            android:background="@color/background_2"
            android:paddingTop="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <Button android:id="@+id/player_list_button"
                android:text="@string/view_player_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <Button android:id="@+id/game_list_button"
                android:text="@string/view_game_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_gravity="right"/>
        </LinearLayout>
    </LinearLayout>
    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_team_button"
        android:text="@string/create_team"/>
</LinearLayout>
