<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/first_name" />
		<EditText android:id="@+id/first_name" 
		  	android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_weight="1"/>
	</LinearLayout>

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/last_name" />
		<EditText android:id="@+id/last_name" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"/>
	</LinearLayout>
	
	<Button android:id="@+id/save" 
	  android:text="@string/save"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_gravity="right"/>

</LinearLayout>